fix text spacing

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -23,7 +23,7 @@ body {
 h1 {
   color: #FFF1D0;
   max-width: 100%;
-  margin-bottom: 0;
+  margin: 0 auto;
   max-height: 90px;
   font-size: 6.5em;
 }
@@ -47,20 +47,25 @@ h2 {
 button {
   background-color: #DD1C1A;
   font-size: 20px;
-  margin-top: 2%;
+  margin-top: 1.5%;
 }
 
 .clock {
   font-size: 25px;
-  margin-top: .5em;
+  margin-top: .3em;
+  margin-bottom: 0;
+  padding: 0;
+  max-height: 25px;
 }
 
 #clock {
   font-size: 25px;
+  margin-top: 0;
+  padding: 0;
 }
 
 #mapholder {
-  margin: 4% auto;
+  margin: .5em auto;
   max-height: auto;
   max-width: 100%;
 }
